--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,127 +5,105 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GameActivity">
+    tools:context=".GameActivity" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="520dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/scores_game_textView"
+        <SurfaceView
+            android:id="@+id/game_game_surfaceview"
+            android:layout_width="0dp"
+            android:layout_height="520dp"
+            android:layout_weight="1" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/record_game_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            <SurfaceView
+                android:id="@+id/nextfigure_game_surfaceview"
+                android:layout_width="150dp"
+                android:layout_height="150dp" />
+
+            <Button
+                android:id="@+id/new_game_game_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/new_game_game_button" />
+
+            <Button
+                android:id="@+id/pause_game_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pause_game_button" />
+
+            <Button
+                android:id="@+id/exit_game_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/exit_game_button" />
+
+            <TextView
+                android:id="@+id/scores_game_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/scores_game_textview" />
+
+            <TextView
+                android:id="@+id/record_game_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/record_game_textview" />
+
+            <TextView
+                android:id="@+id/infobreath_game_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/infobreath_game_textview" />
+
+            <TextView
+                android:id="@+id/breath_game_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:text="" />
+        </LinearLayout>
     </LinearLayout>
 
-    <SurfaceView
-        android:id="@+id/gamesurface_game_surfaceView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/rotate_game_button"
-            android:layout_width="match_parent"
-            android:layout_height="29dp"
-            android:insetLeft="150dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Rotate"
-            app:cornerRadius="15dp"
-            app:iconPadding="0dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
 
         <Button
             android:id="@+id/left_game_button"
-            android:layout_width="match_parent"
-            android:layout_height="29dp"
-            android:insetLeft="40dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Left"
-            app:cornerRadius="15dp"
-            app:iconPadding="0dp" />
-
-        <Button
-            android:id="@+id/down_game_button"
-            android:layout_width="match_parent"
-            android:layout_height="29dp"
-            android:insetLeft="40dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Down"
-            app:cornerRadius="15dp"
-            app:iconPadding="0dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/left_game_button" />
 
         <Button
             android:id="@+id/right_game_button"
-            android:layout_width="match_parent"
-            android:layout_height="29dp"
-            android:insetLeft="40dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Right"
-            app:cornerRadius="15dp"
-            app:iconPadding="0dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/right_game_button" />
 
+        <Button
+            android:id="@+id/down_game_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/down_game_button" />
+
+        <Button
+            android:id="@+id/rotate_game_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/rotate_game_button" />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/new_game_game_button"
-            android:layout_width="wrap_content"
-            android:layout_height="29dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="New Game"
-            app:cornerRadius="15dp"
-            app:iconPadding="0dp" />
-
-        <Button
-            android:id="@+id/pause_game_button"
-            android:layout_width="wrap_content"
-            android:layout_height="29dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Pause"
-            app:cornerRadius="15dp"
-            app:iconPadding="0dp" />
-
-        <Button
-            android:id="@+id/exit_game_button"
-            android:layout_width="wrap_content"
-            android:layout_height="29dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="Exit"
-            app:cornerRadius="15dp"
-            app:iconPadding="0dp" />
-    </LinearLayout>
-
-
 </LinearLayout>
