--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -3,38 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
-    android:background="#161616"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#161616"
     tools:context=".GameActivity">
 
 
     <SurfaceView
         android:id="@+id/game_game_surfaceview"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/rotate_game_button"
-        app:layout_constraintEnd_toStartOf="@+id/new_game_game_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toStartOf="@+id/left_game_button"
+        app:layout_constraintStart_toEndOf="@+id/new_game_game_button"
+        tools:layout_editor_absoluteY="0dp" />
 
     <SurfaceView
         android:id="@+id/nextfigure_game_surfaceview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
+        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/new_game_game_button"
         style="@style/button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/new_game_game_button"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nextfigure_game_surfaceview" />
 
     <Button
@@ -43,8 +41,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/pause_game_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
+        app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_game_game_button" />
 
     <Button
@@ -53,8 +51,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/exit_game_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
+        app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pause_game_button" />
 
     <TextView
@@ -63,19 +61,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/scores_game_textview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
+        app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exit_game_button" />
-
-    <TextView
-        android:id="@+id/record_game_textview"
-        style="@style/text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/record_game_textview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
-        app:layout_constraintTop_toBottomOf="@+id/scores_game_textview" />
 
     <TextView
         android:id="@+id/infobreath_game_textview"
@@ -84,8 +72,8 @@
         android:layout_height="wrap_content"
         android:text="@string/infobreath_game_textview"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
+        app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/record_game_textview" />
 
     <TextView
@@ -95,32 +83,43 @@
         android:layout_height="wrap_content"
         android:text=""
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
+        app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/infobreath_game_textview" />
+
+    <TextView
+        android:id="@+id/record_game_textview"
+        style="@style/text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/record_game_textview"
+        app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scores_game_textview" />
 
 
     <Button
         android:id="@+id/left_game_button"
         style="@style/button"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/left_game_button"
         app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/down_game_button" />
+        app:layout_constraintBottom_toBottomOf="@+id/right_game_button"
+        app:layout_constraintEnd_toStartOf="@+id/right_game_button"
+        app:layout_constraintTop_toTopOf="@+id/right_game_button" />
 
     <Button
         android:id="@+id/right_game_button"
         style="@style/button"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/right_game_button"
         app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
         app:iconGravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/down_game_button" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/down_game_button"
@@ -130,8 +129,10 @@
         android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
         android:text="@string/down_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/right_game_button"
-        app:layout_constraintStart_toEndOf="@+id/left_game_button" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/left_game_button"
+        app:layout_constraintTop_toBottomOf="@+id/right_game_button"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/rotate_game_button"
@@ -140,8 +141,10 @@
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/ic_baseline_rotate_right_24"
         android:text="@string/rotate_game_button"
-        app:layout_constraintBottom_toTopOf="@+id/down_game_button"
+        app:layout_constraintBottom_toTopOf="@+id/right_game_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/game_game_surfaceview"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
