--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
-    android:background="#000000"
+    android:background="#161616"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity">
@@ -28,32 +28,29 @@
 
     <Button
         android:id="@+id/new_game_game_button"
-        style="@style/Widget.Material3.Button"
+        style="@style/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/new_game_game_button"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nextfigure_game_surfaceview" />
 
     <Button
         android:id="@+id/pause_game_button"
-        style="@style/Widget.Material3.Button"
+        style="@style/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/pause_game_button"
-        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_game_game_button" />
 
     <Button
         android:id="@+id/exit_game_button"
-        style="@style/Widget.Material3.Button"
+        style="@style/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/exit_game_button"
-        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pause_game_button" />
@@ -62,6 +59,7 @@
         android:id="@+id/scores_game_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/text"
         android:text="@string/scores_game_textview"
         app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +69,7 @@
         android:id="@+id/infobreath_game_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/text"
         android:text="@string/infobreath_game_textview"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
@@ -81,6 +80,7 @@
         android:id="@+id/breath_game_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/text"
         android:text=""
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
@@ -91,6 +91,7 @@
         android:id="@+id/record_game_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/text"
         android:text="@string/record_game_textview"
         app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,32 +100,33 @@
 
     <Button
         android:id="@+id/left_game_button"
+        style="@style/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.Button"
-        android:textSize="18sp"
         android:text="@string/left_game_button"
+        app:icon="@drawable/ic_baseline_keyboard_arrow_left_24"
         app:layout_constraintBottom_toBottomOf="@+id/right_game_button"
         app:layout_constraintEnd_toStartOf="@+id/right_game_button"
         app:layout_constraintTop_toTopOf="@+id/right_game_button" />
 
     <Button
         android:id="@+id/right_game_button"
-        android:layout_width="103dp"
+        style="@style/button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.Button"
-        android:textSize="18sp"
         android:text="@string/right_game_button"
+        app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
+        app:iconGravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/down_game_button"
+        style="@style/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.Button"
-        android:textSize="18sp"
+        android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
         android:text="@string/down_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,10 +136,10 @@
 
     <Button
         android:id="@+id/rotate_game_button"
+        style="@style/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.Button"
-        android:textSize="18sp"
+        android:drawableTop="@drawable/ic_baseline_rotate_right_24"
         android:text="@string/rotate_game_button"
         app:layout_constraintBottom_toTopOf="@+id/right_game_button"
         app:layout_constraintEnd_toEndOf="parent"
